# rusty-calculator

./: .gitignore  Cargo.toml  readme.md  testscript.txt
.github/workflows/: rust-mac.yml  rust-win.yml  rust.yml
src/: calculator.rs  main.rs  tokenizer.rs
