[package]
name = "rusty-calculator"
version = "1.0.4"
authors = ["Liam Cole (LiamTheIron)"]
edition = "2018"
repository = "https://www.github.com/LiamCoal/rusty-calculator"
description = "Simple calculator written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
regex = "1"
assert_approx_eq = "1.1.0"
rand = "0.7.3"
